bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: too many arguments for method litMessage: ()String
if ( litMessage(R) ) {
               ^BDR:5: error: too many arguments for method litMessage: ()String
else if ( litMessage(L) ){
                    ^BDR:9: error: too many arguments for method litMessage: ()String
else if ( litMessage(I) ) {
                    ^BDR:10: error: too many arguments for method droite: ()Unit
    droite(2)
          ^BDR:13: error: too many arguments for method litMessage: ()String
else if ( litMessage(A) ) {
                    ^BDR:16: error: too many arguments for method litMessage: ()String
else if ( litMessage(B) ) {
                    ^BDR:19: error: too many arguments for method litMessage: ()String
else if ( litMessage(C) ) {
                    ^BDR:22: error: too many arguments for method litMessage: ()String
else if ( litMessage(Z) ) {
                    ^BDR:25: error: too many arguments for method litMessage: ()String
else if ( litMessage(Y) ) {
                    ^BDR:28: error: too many arguments for method litMessage: ()String
else if ( litMessage(X) ) {
                    ^